EC-830 Fix for generate code row spacing

--- a/Comments/ClientApp/src/components/GenerateCode/GenerateCode.scss
+++ b/Comments/ClientApp/src/components/GenerateCode/GenerateCode.scss
@@ -2,7 +2,7 @@
   &__row {
     display: flex;
     align-items: center;
-    padding: 10px;
+    padding: (1rem * ($spacing-small / 16));
   }
 
   &__name, &__generate {
